Week 3: Completed MLP and BatchNorm Exercises

--- a/week3/week3_exercises.ipynb
+++ b/week3/week3_exercises.ipynb
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "746EpPvt8F9v"
       },
@@ -46,29 +46,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "c1en9F8G8F9v",
-        "outputId": "bda349d9-68b0-4c95-aea2-c282b129a832"
+        "outputId": "a0baffad-0daa-4626-cfa2-ed5aafbe15b0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-12-31 05:44:03--  https://raw.githubusercontent.com/karpathy/makemore/master/names.txt\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.111.133, 185.199.108.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "--2026-01-01 05:28:20--  https://raw.githubusercontent.com/karpathy/makemore/master/names.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.109.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 228145 (223K) [text/plain]\n",
-            "Saving to: ‘names.txt.2’\n",
+            "Saving to: ‘names.txt’\n",
             "\n",
-            "\rnames.txt.2           0%[                    ]       0  --.-KB/s               \rnames.txt.2         100%[===================>] 222.80K  --.-KB/s    in 0.02s   \n",
+            "\rnames.txt             0%[                    ]       0  --.-KB/s               \rnames.txt           100%[===================>] 222.80K  --.-KB/s    in 0.03s   \n",
             "\n",
-            "2025-12-31 05:44:03 (8.72 MB/s) - ‘names.txt.2’ saved [228145/228145]\n",
+            "2026-01-01 05:28:21 (8.38 MB/s) - ‘names.txt’ saved [228145/228145]\n",
             "\n"
           ]
         },
@@ -80,7 +80,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 86
+          "execution_count": 7
         }
       ],
       "source": [
@@ -92,13 +92,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "h1yDjo3f8F9w",
-        "outputId": "a4c1fe87-f880-49ca-a205-62fdd05e40b1"
+        "outputId": "0ebba5ae-75d3-4b27-c407-63dcca5905c7"
       },
       "outputs": [
         {
@@ -109,7 +109,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 87
+          "execution_count": 8
         }
       ],
       "source": [
@@ -118,13 +118,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JN889LiO8F9w",
-        "outputId": "5dd69934-5613-46a8-fb97-a53669c7da82"
+        "outputId": "ba22a8f1-3751-4d0b-e14d-39be302f48ff"
       },
       "outputs": [
         {
@@ -146,13 +146,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lvCHDuCt8F9x",
-        "outputId": "f21b5aa2-3a77-4c00-9f5c-ba33537d59d4"
+        "outputId": "7331e82c-e1fa-4bc2-e77d-f2a9c4ffa323"
       },
       "outputs": [
         {
@@ -200,7 +200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "207WWRyZ8F90"
       },
@@ -211,13 +211,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3T2XxYaG8F90",
-        "outputId": "5d5a87c3-ab6e-49af-9361-7937288dbcb8"
+        "outputId": "61f2a4b6-0270-4591-e48d-b7339fa5af6d"
       },
       "outputs": [
         {
@@ -228,7 +228,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 91
+          "execution_count": 12
         }
       ],
       "source": [
@@ -237,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "qTliOIBD8F90"
       },
@@ -255,13 +255,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q_PtpQcN8F90",
-        "outputId": "44d4ef20-dea7-46f6-eca7-85f8db4d292e"
+        "outputId": "62b79161-b937-4b06-fcf9-3a5b8825d27f"
       },
       "outputs": [
         {
@@ -272,7 +272,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 93
+          "execution_count": 14
         }
       ],
       "source": [
@@ -281,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "y6Y6ncVd8F91"
       },
@@ -293,7 +293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "7FncbI6W8F91"
       },
@@ -305,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "8IU_BjgJ8F91"
       },
@@ -318,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "O4Rp0gC58F91"
       },
@@ -359,24 +359,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fC9Rfa2-8F91",
-        "outputId": "ddc8cec3-90f0-49bd-f118-51f0a986f65e"
+        "outputId": "ca9ba6e0-91ad-42da-949f-ae4401029b3f"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor(2.0572, grad_fn=<NllLossBackward0>)"
+              "tensor(2.1358, grad_fn=<NllLossBackward0>)"
             ]
           },
           "metadata": {},
-          "execution_count": 102
+          "execution_count": 19
         }
       ],
       "source": [
@@ -389,24 +389,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rTo5d-n-8F91",
-        "outputId": "a67aa1dc-ec40-470b-f297-1d071300e8db"
+        "outputId": "c9edd7cb-74d3-47e5-f3bd-728f50436941"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor(2.1300, grad_fn=<NllLossBackward0>)"
+              "tensor(2.1784, grad_fn=<NllLossBackward0>)"
             ]
           },
           "metadata": {},
-          "execution_count": 103
+          "execution_count": 20
         }
       ],
       "source": [
@@ -541,6 +541,8 @@
         "n_embd = 10 # the dimensionality of the character embedding vectors\n",
         "n_hidden = 100 # the number of neurons in the hidden layer of the MLP\n",
         "g = torch.Generator().manual_seed(2147483647) # for reproducibility\n",
+        "vocab_size =27\n",
+        "block_size = 3\n",
         "\n",
         "C = torch.randn((vocab_size, n_embd), generator=g, requires_grad=True)\n",
         "\n",
@@ -580,9 +582,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4LHWTaDsOX2p",
-        "outputId": "71433f46-2907-4ff5-f112-031c449283b8"
+        "outputId": "b796f65b-be30-4a84-92c7-e15565eba5e7"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -632,16 +634,50 @@
         "    ud.append([((lr*p.grad).std() / p.data.std()).log10().item() for p in parameters])"
       ],
       "metadata": {
-        "id": "HyHgKAXW0NiF"
+        "id": "HyHgKAXW0NiF",
+        "outputId": "7cee9a0a-7849-4f65-aabf-8c6f4be8d048",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "      0/ 200000: 3.2958\n",
+            "  10000/ 200000: 2.7882\n",
+            "  20000/ 200000: 2.7518\n",
+            "  30000/ 200000: 2.8506\n",
+            "  40000/ 200000: 2.8221\n",
+            "  50000/ 200000: 2.8987\n",
+            "  60000/ 200000: 2.6038\n",
+            "  70000/ 200000: 2.6751\n",
+            "  80000/ 200000: 3.0131\n",
+            "  90000/ 200000: 2.7753\n",
+            " 100000/ 200000: 2.6079\n",
+            " 110000/ 200000: 2.5352\n",
+            " 120000/ 200000: 2.6702\n",
+            " 130000/ 200000: 2.6442\n",
+            " 140000/ 200000: 2.8332\n",
+            " 150000/ 200000: 2.5482\n",
+            " 160000/ 200000: 2.9762\n",
+            " 170000/ 200000: 2.9521\n",
+            " 180000/ 200000: 2.8626\n",
+            " 190000/ 200000: 2.8505\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "##Initialising W1 b1 to zeros:\n",
-        "If weights and biases are initialised to zero, the network enters a state of symmetry, preventing it from learning correctly. Because every hidden neuron starts at zero, receives the same input, and produces identical tanh(0)=0 activations, they all receive identical gradients. The entire hidden layer (e.g., 200 neurons) behaves like a single neuron. However, the Embedding Layer (C) and Output Layer (W2, b2) can still differentiate because they have their own random initializations.\n"
+        "##Initialising W1 b1 to zeros ^^:\n",
+        "\n",
+        "If weights and biases are initialised to zero, the network enters a state of symmetry, preventing it from learning correctly. Because every hidden neuron starts at zero, receives the same input, and produces identical tanh(0)=0 activations, they all receive identical gradients. The entire hidden layer (e.g., 200 neurons) behaves like a single neuron. However, the Embedding Layer (C) and Output Layer (W2, b2) can still differentiate because they have their own random initializations.\n",
+        "\n",
+        "It is seen above that the loss moves randomly and does not decrease as it should be.\n"
       ],
       "metadata": {
         "id": "79bP45op0Obg"
@@ -716,7 +752,7 @@
       "metadata": {
         "id": "iRS0PF5B2uSS"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -760,15 +796,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iXstkhss2zzY",
-        "outputId": "8313a197-daf9-4f05-d5d2-813f616e7408"
+        "outputId": "3a2d9434-0682-4e78-ff09-4a828b146031"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Folding successful! Max difference: 1.1921e-06\n"
+            "Folding successful! Max difference: 0.0000e+00\n"
           ]
         }
       ]
