Week 3: Completed MLP and BatchNorm Exercises

--- a/week3/week3_exercises.ipynb
+++ b/week3/week3_exercises.ipynb
@@ -222,15 +222,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 34,
       "metadata": {
         "id": "qTliOIBD8F90"
       },
       "outputs": [],
       "source": [
         "g = torch.Generator().manual_seed(2147483647) # for reproducibility\n",
-        "n_hidden = 200                                # 250 hidden neurons\n",
-        "C = torch.randn((27, 16), generator=g)        # embedding space of 36\n",
+        "n_hidden = 200                                # 200 hidden neurons\n",
+        "C = torch.randn((27, 16), generator=g)        # embedding space of 16\n",
         "W1 = torch.randn((48, n_hidden), generator=g)\n",
         "b1 = torch.randn(n_hidden, generator=g)\n",
         "W2 = torch.randn((n_hidden, 27), generator=g)\n",
@@ -303,28 +303,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
-        "id": "O4Rp0gC58F91",
-        "outputId": "98add948-be45-4743-eab4-d53aac5e78a0",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 211
-        }
+        "id": "O4Rp0gC58F91"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "RuntimeError",
-          "evalue": "mat1 and mat2 shapes cannot be multiplied (10x48 and 30x200)",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-3187397975.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m   \u001b[0;31m# forward pass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m   \u001b[0memb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mC\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mXtr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mix\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# (128, 4, 36)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m   \u001b[0mh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtanh\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0memb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mview\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m48\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mW1\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mb1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# (128, 250)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m   \u001b[0mlogits\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mh\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mW2\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mb2\u001b[0m \u001b[0;31m# (128, 27)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m   \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_entropy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogits\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mYtr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mix\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mRuntimeError\u001b[0m: mat1 and mat2 shapes cannot be multiplied (10x48 and 30x200)"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "batch_size = 16\n",
         "iterations = 200000\n",
@@ -334,9 +317,9 @@
         "  ix = torch.randint(0, Xtr.shape[0], (batch_size,))\n",
         "\n",
         "  # forward pass\n",
-        "  emb = C[Xtr[ix]] # (128, 4, 36)\n",
-        "  h = torch.tanh(emb.view(-1, 48) @ W1 + b1) # (128, 250)\n",
-        "  logits = h @ W2 + b2 # (128, 27)\n",
+        "  emb = C[Xtr[ix]]\n",
+        "  h = torch.tanh(emb.view(-1, 48) @ W1 + b1)\n",
+        "  logits = h @ W2 + b2\n",
         "  loss = F.cross_entropy(logits, Ytr[ix])\n",
         "  #print(loss.item())\n",
         "\n",
@@ -569,11 +552,11 @@
         "        print(f'{i:7d}/{200000:7d}: {loss.item():.4f}')"
       ],
       "metadata": {
-        "id": "j1hP28co1Z3g",
-        "outputId": "63bc464f-07bb-4cc4-db18-65882879b56b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "j1hP28co1Z3g",
+        "outputId": "63bc464f-07bb-4cc4-db18-65882879b56b"
       },
       "execution_count": 29,
       "outputs": [
@@ -629,11 +612,11 @@
         "split_loss('val')"
       ],
       "metadata": {
-        "id": "4kpUkDLU1RSV",
-        "outputId": "46073636-ae86-441c-ce56-ed8deb6a7bd9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4kpUkDLU1RSV",
+        "outputId": "46073636-ae86-441c-ce56-ed8deb6a7bd9"
       },
       "execution_count": 30,
       "outputs": [
@@ -671,7 +654,7 @@
         "\n",
         "If weights and biases are initialised to zero, the network enters a state of symmetry, preventing it from learning correctly. Because every hidden neuron starts at zero, receives the same input, and produces identical tanh(0)=0 activations, they all receive identical gradients. The entire hidden layer (e.g., 200 neurons) behaves like a single neuron. However, the Embedding Layer (C) and Output Layer (W2, b2) can still differentiate because they have their own random initializations.\n",
         "\n",
-        "It is seen above that the loss moves randomly and does not decrease as it should be.\n"
+        "It is seen below that the loss moves randomly and does not decrease as it should be.\n"
       ],
       "metadata": {
         "id": "79bP45op0Obg"
@@ -843,13 +826,32 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "      0/ 200000: 3.2958\n"
+            "      0/ 200000: 3.2958\n",
+            "  10000/ 200000: 2.7882\n",
+            "  20000/ 200000: 2.7518\n",
+            "  30000/ 200000: 2.8506\n",
+            "  40000/ 200000: 2.8221\n",
+            "  50000/ 200000: 2.8987\n",
+            "  60000/ 200000: 2.6038\n",
+            "  70000/ 200000: 2.6751\n",
+            "  80000/ 200000: 3.0131\n",
+            "  90000/ 200000: 2.7753\n",
+            " 100000/ 200000: 2.6079\n",
+            " 110000/ 200000: 2.5352\n",
+            " 120000/ 200000: 2.6702\n",
+            " 130000/ 200000: 2.6442\n",
+            " 140000/ 200000: 2.8332\n",
+            " 150000/ 200000: 2.5482\n",
+            " 160000/ 200000: 2.9762\n",
+            " 170000/ 200000: 2.9521\n",
+            " 180000/ 200000: 2.8626\n",
+            " 190000/ 200000: 2.8505\n"
           ]
         }
       ]
@@ -923,7 +925,54 @@
       "metadata": {
         "id": "iRS0PF5B2uSS"
       },
-      "execution_count": null,
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Setup hyperparameters\n",
+        "n_embd, n_hidden = 10, 200\n",
+        "block_size = 3\n",
+        "vocab_size = 27\n",
+        "\n",
+        "# Initialize parameters\n",
+        "C = torch.randn((vocab_size, n_embd))\n",
+        "layers = [\n",
+        "  Linear(n_embd * block_size, n_hidden, bias=False), BatchNorm1d(n_hidden), Tanh(),\n",
+        "  Linear(n_hidden, vocab_size, bias=False),          BatchNorm1d(vocab_size),\n",
+        "]\n",
+        "\n",
+        "parameters = [C] + [p for layer in layers for p in layer.parameters()]\n",
+        "for p in parameters:\n",
+        "  p.requires_grad = True\n",
+        "\n",
+        "# Training Loop\n",
+        "for i in range(200000):\n",
+        "  ix = torch.randint(0, Xtr.shape[0], (32,))\n",
+        "  Xb, Yb = Xtr[ix], Ytr[ix]\n",
+        "\n",
+        "  # Forward pass\n",
+        "  emb = C[Xb]\n",
+        "  x = emb.view(emb.shape[0], -1)\n",
+        "  for layer in layers:\n",
+        "    x = layer(x)\n",
+        "  loss = F.cross_entropy(x, Yb)\n",
+        "\n",
+        "  # Backward pass\n",
+        "  for p in parameters:\n",
+        "    p.grad = None\n",
+        "  loss.backward()\n",
+        "\n",
+        "  # Update\n",
+        "  lr = 0.1 if i < 100000 else 0.01\n",
+        "  for p in parameters:\n",
+        "    p.data += -lr * p.grad"
+      ],
+      "metadata": {
+        "id": "AKanBcUaCA3u"
+      },
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -963,10 +1012,22 @@
         "print(f\"Folding successful! Max difference: {max_diff:.4e}\")"
       ],
       "metadata": {
-        "id": "iXstkhss2zzY"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iXstkhss2zzY",
+        "outputId": "8eb2ec9f-7415-48e5-9abc-43d760f44a9d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Folding successful! Max difference: 1.9073e-06\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
